Saved by TiddlyWiki

--- a/cafe.html
+++ b/cafe.html
@@ -13955,8 +13955,10 @@ enum class Functions {
 
 &lt;/div&gt;</pre>
 </div>
-<div created="20211004104221290" creator="zeid" modified="20211004104329853" modifier="zeid" tags="DS DS-tutorial" title="Basic lift script">
-<pre>&lt;div class=&quot;mw-parser-output&quot;&gt;
+<div created="20211004104221290" creator="zeid" modified="20211004104445909" modifier="zeid" tags="DS DS-tutorial" title="Basic lift script">
+<pre>https://creatures.wiki/Basic_lift_script
+
+&lt;div class=&quot;mw-parser-output&quot;&gt;
 
 &lt;p&gt;This is a very basic &lt;a href=&quot;/Lift&quot; title=&quot;Lift&quot;&gt;lift&lt;/a&gt; with 2 levels and 2 call &lt;a href=&quot;/Button&quot; title=&quot;Button&quot;&gt;buttons&lt;/a&gt;.
 &lt;/p&gt;
