Saved by TiddlyWiki

--- a/cafe.html
+++ b/cafe.html
@@ -13955,10 +13955,10 @@ enum class Functions {
 
 &lt;/div&gt;</pre>
 </div>
-<div created="20211004104221290" creator="zeid" modified="20211004104940005" modifier="zeid" tags="DS DS-tutorial" title="Basic lift script">
+<div created="20211004104221290" creator="zeid" modified="20211004105001997" modifier="zeid" tags="DS DS-tutorial" title="Basic lift script">
 <pre>https://creatures.wiki/Basic_lift_script
 
-&lt;iframe src=&quot;https://creatures.wiki/Basic_lift_script&quot; style=&quot;width:100%; height:500px&quot;&gt;
+&lt;iframe src=&quot;https://creatures.wiki/Basic_lift_script&quot; style=&quot;width:100%; height:500px&quot;&gt;&lt;/iframe&gt;
 
 &lt;div class=&quot;mw-parser-output&quot;&gt;
 
